tests/ui/error-codes/E0220.stderr
error[E0220]: associated type `F` not found for `Trait`
  --> $DIR/E0220.rs:5:22
   |
LL | type Foo = dyn Trait<F=i32>;
   |                      ^ help: `Trait` has the following associated type: `Bar`

error[E0191]: the value of the associated type `Bar` in `Trait` must be specified
  --> $DIR/E0220.rs:5:16
   |
LL |     type Bar;
   |     -------- `Bar` defined here
...
LL | type Foo = dyn Trait<F=i32>;
   |                ^^^^^^^^^^^^ help: specify the associated type: `Trait<F=i32, Bar = Type>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0191, E0220.
For more information about an error, try `rustc --explain E0191`.
